force-app/main/default/objects/Invoice__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <label>Balance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>