force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>IF( NOT( ISBLANK( Invoice_Date__c ) ) , Invoice_Date__c + 15, null)</formula>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>