force-app/main/default/objects/Invoice__c/fields/Name_Label__c.field-meta.xml
<CustomField>
    <fullName>Name_Label__c</fullName>
    <formula>Name + &apos;-&apos; +  TEXT(MONTH(DATEVALUE( Due_Date__c ))) + &apos;/&apos; + TEXT(DAY(DATEVALUE( Due_Date__c ))) +  &apos;/&apos; + TEXT(YEAR(DATEVALUE( Due_Date__c ))) + &apos;-&apos; +  Text(Balance_Amount__c )</formula>
    <label>Name Label</label>
    <type>Text</type>
</CustomField>