force-app/main/default/objects/Invoice__c/fields/No_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Payments__c</fullName>
    <label>No. of Payments</label>
    <summaryForeignKey>Invoice_Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>