force-app/main/default/objects/Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order detail for the invoice</description>
    <inlineHelpText>Order detail for the invoice</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order_Detail__c</referenceTo>
    <relationshipLabel>Invoices (Order)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>