force-app/main/default/objects/Invoice__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <summarizedField>Invoice_Payment__c.Paid_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>