force-app/main/default/objects/Invoice__c/fields/Payment_Done__c.field-meta.xml
<CustomField>
    <fullName>Payment_Done__c</fullName>
    <formula>IF(NULLVALUE(Paid_Amount__c,0) = 0,&apos;Not Paid&apos;, IF(NULLVALUE( Balance_Amount__c ,0) &gt; 0 ,&apos;Partially Paid&apos;, &apos;Fully Paid&apos;))</formula>
    <label>Payment Done</label>
    <type>Text</type>
</CustomField>