force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employer__c</columns>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>No_of_Payments__c</columns>
    <columns>Order__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Payment_Done__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>